fixed spacing on categories

--- a/Draft/css/category-css/livingroom-reusable.css
+++ b/Draft/css/category-css/livingroom-reusable.css
@@ -153,7 +153,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     z-index: 10;
 }
-    height: 36px;
+    /* height: 36px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -162,7 +162,7 @@
     padding: 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     z-index: 10;
-}
+} */
 
 .add-to-basket img {
     width: 18px !important;
@@ -241,9 +241,9 @@
     color: #2B2B2B;
     cursor: pointer;
 }
-cursor: pointer;
+/* cursor: pointer;
 
-}
+} */
 .tag .X {
     display: none;
     font-weight: bold;
