--- a/Draft/css/category-css/livingroom-structure.css
+++ b/Draft/css/category-css/livingroom-structure.css
@@ -18,7 +18,7 @@
     font-family: "Ibarra Real Nova", serif;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 5px;
     position: sticky;
     top: 120px;
 }
@@ -32,7 +32,7 @@
     align-items: center;
     color: #2B2B2B;
     cursor: pointer;
-    padding: 6px 0;
+    padding: 10px 0;
     transition: color 0.2s ease;
 }
 
